# realgameengine

./: Cargo.toml  LICENSE  build.sh
examples/test_example/: Cargo.toml  build.sh  build_wasm
examples/test_example/src/: lib.rs
examples/test_example/web/: index.html  start.py
examples/test_example/web/pkg/: package.json  test_example.d.ts  test_example.js  test_example_bg.wasm  test_example_bg.wasm.d.ts
gsl/: triangle.wgsl  triangle_anim.wgsl
proc_marcoes/: Cargo.toml
proc_marcoes/src/: lib.rs
src/: lib.rs  prelude.rs
src/engine/: flags.rs  log.rs  messages.rs  mod.rs  world.rs
src/engine/renderer/: mod.rs
src/engine/window/: mod.rs  sdl_backend.rs  web_backend.rs
