[package]
name = "realgameengine"
version = "0.1.0"
edition = "2024"



[lib]
crate-type = ["cdylib", "rlib"]


[workspace]
members = ["./examples/*", "proc_marcoes"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
log = "0.4.28"
once_cell = "1.21.3"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = "27.0.1"
proc_marcoes = {path = "./proc_marcoes"}

[features]
default = []
static=["sdl3/build-from-source","sdl3/static-link"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3-sys = "0.5.11"
sdl3 = { version = "0.14", features = ["raw-window-handle","build-from-source-static"] }
env_logger = "0.11"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
ts-rs = "11.1.0"

